--- a/mcp_config.example.json
+++ b/mcp_config.example.json
@@ -25,12 +25,14 @@
       "name": "amap-maps",
       "protocol": "streamablehttp",
       "url": "https://mcp.amap.com/mcp?key=your_amap_key_here",
+      "timeout": 30,
       "description": "高德地图 MCP server，提供了基于位置服务、地点信息搜索、路径规划、天气查询等能力"
     },
     {
       "name": "custom-api",
       "protocol": "sse",
       "url": "http://localhost:8000/sse",
+      "timeout": 30,
       "description": "Custom SSE-based MCP server"
     }
   ]
